ButtonlessFilters: added transparent border-bottom to prevent spacing changes between selected & not selected

--- a/src/components/common/Filters/ButtonlessFilters.css
+++ b/src/components/common/Filters/ButtonlessFilters.css
@@ -2,6 +2,7 @@
   display: inline-block;
   margin: 0 18px 6px 0;
   font-size: 1.17em;
+  border-bottom: 3px solid transparent;`
 }
 
 .ButtonlessFilters .selected{
